# toolcraft

./: .gitignore  Cargo.toml  LICENSE  README.md  release.toml
config/: README.md  jwt.example.toml
crates/toolcraft-axum-kit/: Cargo.toml  README.md  release.toml
crates/toolcraft-axum-kit/src/: error.rs  http_server.rs  lib.rs  response.rs
crates/toolcraft-axum-kit/src/middleware/: auth_mw.rs
crates/toolcraft-config/: Cargo.toml  README.md  release.toml
crates/toolcraft-config/src/: error.rs  lib.rs
crates/toolcraft-jwt/: Cargo.toml  README.md  release.toml
crates/toolcraft-jwt/src/: error.rs  jwt.rs  lib.rs  verify.rs
crates/toolcraft-object-store/: Cargo.toml
crates/toolcraft-object-store/src/: lib.rs
crates/toolcraft-request/: Cargo.toml  README.md  release.toml
crates/toolcraft-request/src/: client.rs  error.rs  header_map.rs  lib.rs  response.rs
crates/toolcraft-s3-kit/: Cargo.toml  README.md  release.toml
crates/toolcraft-s3-kit/src/: bucket_client.rs  client.rs  config.rs  error.rs  lib.rs  util.rs
crates/toolcraft-s3-kit/src/minio/: s3.rs
crates/toolcraft-utils/: Cargo.toml  README.md  release.toml
crates/toolcraft-utils/src/: lib.rs
crates/toolcraft-utils/src/utils/: mod.rs  s3_util.rs  time_util.rs
examples/: generate_table_docx.rs  read_docx.rs  request_demo.rs  s3.rs  table.rs
scripts/: README.md  release.sh
src/: error.rs  lib.rs
src/docx/: scan copy.rs  scan.rs
src/jinjia2/: docx.rs  extractor.rs  mod.rs  parser.rs  schema.rs
src/request/: client.rs  header_map.rs  mod.rs
src/s3/: minio.rs  mod.rs
