[workspace]
members = [
    "crates/toolcraft-axum-kit", "crates/toolcraft-config",
    "crates/toolcraft-jwt",
    "crates/toolcraft-request", "crates/toolcraft-utils",
]
resolver = "3"


[workspace.package]
version = "0.2.2"
edition = "2024"
description = "A modular Rust toolkit"
authors = ["Ancient <gamesworldcraft@gmail.com>"]
license = "MIT"
repository = "https://github.com/code-serenade/toolcraft.git"
documentation = "https://docs.rs/toolcraft"

[workspace.dependencies]
# internal dependencies
toolcraft-jwt = { path = "crates/toolcraft-jwt" }
toolcraft-axum-kit = { path = "crates/toolcraft-axum-kit" }
toolcraft-request = { path = "crates/toolcraft-request" }

thiserror = "2"
tokio = { version = "1.46", features = ["full"] }
regex = "1"
zip = "4"
quick-xml = { version = "0.38", features = ["encoding"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.5"
futures-util = "0.3"
bytes = "1"
minio = { version = "0.3" }
docx-rs = { version = "0.4" }
byteorder = "1.5"
config = "0.15"
futures = "0.3"
jsonwebtoken = "9"
tokio-tungstenite = "0.27"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
surrealdb = "2"
rand = "0.9"
utoipa = "5"
