[package]
name = "toolcraft-axum-kit"
description = "Toolcraft axum kit module"
documentation = "https://docs.rs/toolcraft-axum-kit"
publish = true
version = "0.2.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
toolcraft-jwt = { version = "0.2.0", path = "../toolcraft-jwt" }

axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
thiserror = { workspace = true }

[features]
jwt = []

default = ["jwt"]
