[package]
name = "toolcraft-jwt"
description = "Toolcraft jwt module"
documentation = "https://docs.rs/toolcraft-jwt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
