[package]
name = "toolcraft-jwt"
description = "Toolcraft jwt module"
documentation = "https://docs.rs/toolcraft-jwt"
publish = true
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
