[package]
name = "toolcraft-request"
description = "Toolcraft request module"
publish = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest.workspace = true
bytes.workspace = true
futures-util.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
