[package]
name = "toolcraft-s3-kit"
description = "Toolcraft s3 module"
documentation = "https://docs.rs/toolcraft-s3-kit"
publish = true
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
minio.workspace = true
url.workspace = true
zip.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
bytes.workspace = true
