[package]
name = "toolcraft-s3-kit"
description = "Toolcraft S3-compatible storage client"
documentation = "https://docs.rs/toolcraft-s3-kit"
publish = true
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
toolcraft-request = { workspace = true }
toolcraft-utils = { workspace = true}
thiserror.workspace = true
reqwest.workspace = true
bytes.workspace = true
url.workspace = true
tokio = { workspace = true, features = ["fs"] }
