[package]
name = "toolcraft-utils"
description = "Common utilities for toolcraft ecosystem"
documentation = "https://docs.rs/toolcraft-utils"
publish = true
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
hex = { workspace = true }
